# esp32_lvgl_idf_beer

./: .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
components/ui/screens/: ui_home.c  ui_setting.c  ui_step1.c  ui_success.c
main/: CMakeLists.txt  main.c
